# softtree

./: README.md  classification_odt.py  classification_st.py  pyproject.toml
softtree/: extraction_util.py  oblique_tree.py  softtree_classification.py  training_util.py
